Fixed nav icons overlapping on short screens

--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@ body{
 .top-bar {
     background-color: #181818;
     display: flex;
-    gap: 1rem;
-    height: 5vh;
+    gap: 1em;
+    height: 6vh;
     border-bottom: 3px solid #1f1f1f;
     color: white;
     font-size: 12px;
@@ -22,24 +22,23 @@ body{
 
 .main-grid-container {
     display: flex;
-    height: 91.5vh;
-    /* grid-template-columns: 30% 1fr; */
+    height: 120vh;
     margin-bottom: 0;
     background-color: #1f1f1f;
 }
 
 .side-items{
-    max-width: 20%;
+    width: 100em;
+    max-width: 200px;
     display: flex;
     column-gap: 0;
-    background-color: pink;
 }
 
 .left-file-bar{
     background-color: #181818;
     color: #e2c08d;
     font-size: 13px;
-    min-width: 120px;
+    /* min-width: 120px; */
     flex: 1;
 }
 .left-file-bar ul{
@@ -57,6 +56,7 @@ body{
     display:flex;
     flex-direction:column;
     gap: 2rem;
+    flex: 1;
     max-width: 50px;
 }
 .side-nav-bar div{
@@ -93,6 +93,7 @@ img {
 
 .main-editor {
     color: white;
+    overflow-y: auto;
 }
 
 footer{
@@ -103,7 +104,7 @@ footer{
     background-color: #181818;
     color: #cccccc;
     font-size: smaller;
-    height: 3vh;
+    height: 5vh;
 }
 
 footer div {
